# website

./: .dockerignore  .eslintrc.js  .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc.js  Dockerfile  Gemfile  Makefile  README.md  babel.config.json  config.toml  eslint.config.mjs  package-lock.json  package.json  postcss.config.js  pyproject.toml  rollup.config.js  rollup.config.mjs  tailwind.config.js  vercel.json
.github/workflows/: deploy-preview.yaml  deploy-preview.yml  deploy-production.yaml  deploy-production.yml  github-pages.yml
assets/src/: app.js
assets/src/css/: _base.css  _content.css  _docs.css  _fonts.css  _highlight.css  _search.css  _windows.css  app.css
assets/src/js/: components.js  particles.js
assets/src/js/controllers/: menu_controller.js  mode_switch_controller.js  select_controller.js
content/: _index.md  history.md
content/blog/: 2018-03-14-poetry-0-5-0-is-out.md  2018-03-16-poetry-0-6-0-is-out.md  2018-03-18-poetry-0-6-1-is-out.md  2018-03-19-poetry-0-6-2-is-out.md  2018-03-20-poetry-0-6-3-is-out.md  2018-03-21-poetry-0-6-4-is-out.md  2018-03-22-poetry-0-6-5-is-out.md  2018-04-04-poetry-0-7-0-is-out.md  2018-04-13-poetry-0-8-0-is-out.md  2018-04-13-poetry-0-8-1-is-out.md  2018-04-14-poetry-0-8-2-is-out.md  2018-04-16-poetry-0-8-3-is-out.md  2018-04-18-poetry-0-8-4-is-out.md  2018-04-19-poetry-0-8-5-is-out.md  2018-04-30-poetry-0-8-6-is-out.md  2018-05-07-poetry-0-9-0-is-out.md  2018-05-18-poetry-0-9-1-is-out.md  2018-05-28-poetry-0-10-0-is-out.md  2018-05-28-poetry-0-10-1-is-out.md  2018-05-31-poetry-0-10-2-is-out.md  2018-06-04-poetry-0-10-3-is-out.md  2018-06-28-poetry-0-11-0-is-out.md  2018-06-29-poetry-0-11-1-is-out.md  2018-07-03-poetry-0-11-2-is-out.md  2018-07-26-poetry-0-11-3-is-out.md  2018-07-30-poetry-0-11-4-is-out.md  2018-09-04-poetry-0-11-5-is-out.md  2018-10-17-poetry-0-12-0-is-out.md  2018-10-17-poetry-0-12-1-is-out.md  2018-10-17-poetry-0-12-2-is-out.md  2018-10-18-poetry-0-12-3-is-out.md  2018-10-21-poetry-0-12-4-is-out.md  2018-10-26-poetry-0-12-5-is-out.md  2018-11-05-poetry-0-12-6-is-out.md  2018-11-08-poetry-0-12-7-is-out.md  2018-11-13-poetry-0-12-8-is-out.md  2018-11-19-poetry-0-12-9-is-out.md  2018-11-22-poetry-0-12-10-is-out.md  2019-01-13-poetry-0-12-11-is-out.md  2019-04-11-poetry-0-12-12-is-out.md  (+55 more)
content/docs/: configuration.md
layouts/: 404.html  home.html
layouts/_default/: baseof.html  list.html
layouts/docs/: baseof.html
layouts/page/: single.html
layouts/partials/: blog_meta.html  dark_mode_switcher.html  documentation_flyover.html  footer.html  head.html  header_docs.html  scripts.html  stylesheets.html
layouts/shortcodes/: note.html  step.html  tabs.html  tip.html  warning.html
src/: app.js
src/css/: _base.css  _clipboard.css  _components.css  _content.css  _docs.css  _fonts.css  _highlight.css  _search.css  _windows.css  app.css
src/js/controllers/: clipboard_controller.js  flyover_controller.js  menu_controller.js  mode_switch_controller.js  select_controller.js  tabs_controller.js
themes/poetry/: theme.toml
themes/poetry/layouts/: 404.html  home.html  index.html
themes/poetry/layouts/_default/: baseof.html
themes/poetry/layouts/blog/: baseof.html  list.html  single.html
themes/poetry/layouts/categories/: baseof.html  list.html
themes/poetry/layouts/docs/: baseof.html  single.html
themes/poetry/layouts/page/: single.html
themes/poetry/layouts/partials/: blog_meta.html  dark_mode.html  dark_mode_switcher.html  documentation_flyover.html  footer.html  head.html  header.html  header_docs.html  scripts.html  stylesheets.html
themes/poetry/layouts/shortcodes/: clipboard.html  note.html  option.html  step.html  steps.html  tab.html  tabs.html  tip.html  warning.html
themes/poetry/layouts/tags/: baseof.html
