[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["Sébastien Eustace <sebastien@eustace.io>"]

[tool.poetry.dependencies]
python = "^3.10"
cleo = "^1.0.0a5"
PyYAML = "^6.0"
tomli = "^2.0"
httpx = "^0.23"
tomli-w = "^1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.13.0"

[tool.black]
target-version = ["py310"]
preview = true

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
filter_files = true

[tool.website.config]
baseURL = "https://python-poetry.org/"
languageCode = "en-us"
title = "Poetry - Python dependency management and packaging made easy"

ignoreFiles = ["^assets/src"]
pygmentsUseClasses = true

[tool.website.config.permalinks]
blog = "/blog/:title/"
categories = "/blog/category/:title/"
tags = "/blog/tag/:title/"

[tool.website.config.params]
description = "Python dependency management and packaging made easy"

[tool.website.config.params.documentation]
defaultVersion = "1.4"

[tool.website.config.markup.goldmark.renderer]
unsafe = true

[tool.website.config.minify.tdewolff.html]
keepWhitespace = true

[tool.website.versions]
"1.4" = "1.4"
"1.3" = "1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
