[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["Sébastien Eustace <sebastien@eustace.io>"]

[tool.poetry.dependencies]
python = "^3.10"
cleo = "^2.1.0"
PyYAML = "^6.0"
tomli = "^2.0"
httpx = "^0.26"
tomli-w = "^1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=2.13.0"

[tool.ruff]
fix = true
line-length = 88
target-version = "py310"

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ERA", # flake8-eradicate/eradicate
    "I",   # isort
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "PGH", # pygrep
    "RUF", # ruff checks
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
]
unfixable = [
    "ERA", # do not autoremove commented out code
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
force-single-line = true
lines-between-types = 1
lines-after-imports = 2
required-imports = ["from __future__ import annotations"]

[tool.website.config]
baseURL = "https://python-poetry.org/"
languageCode = "en-us"
title = "Poetry - Python dependency management and packaging made easy"

ignoreFiles = ["^assets/src"]
pygmentsUseClasses = true

[tool.website.config.permalinks]
blog = "/blog/:title/"
categories = "/blog/category/:title/"
tags = "/blog/tag/:title/"

[tool.website.config.params]
description = "Python dependency management and packaging made easy"

[tool.website.config.params.documentation]
defaultVersion = "2.0"

[tool.website.config.markup.goldmark.renderer]
unsafe = true

[tool.website.config.minify.tdewolff.html]
keepWhitespace = true

[tool.website.versions]
"2.0" = "2.0"
"1.8" = "1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
